--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -1024,4 +1024,9 @@ body {
     padding: 0 !important;
     font-size: 1em !important;
     margin-top: 0 !important;
+
+    &:hover {
+        background-color: #134571 !important;
+        color: #fff !important;
+    }
 }
