--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_typography.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_typography.scss
@@ -224,6 +224,7 @@ body {
                 color: #fff !important;
 
                 &:focus {
+                    background-color: #fff;
                     color: #26262a !important;
                 }
 
