--- a/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
@@ -50,7 +50,7 @@
 
                                 @if (ViewData.ModelState["ticket-booking-reference"]?.Errors.Count() > 0 || (ViewData.ModelState["BookingReference"]?.Errors.Count() > 0))
                                 {
-                                    @Html.TextBoxFor(Model => Model.BookingReference, new { id = "reference-number", @class = "form-warning", required = true })
+                                    @Html.TextBoxFor(Model => Model.BookingReference, new { id = "reference-number", @class = "form-warning", required = true, aria_describedby = "validation-message-booking-reference" })
                                 }
                                 else
                                 {
@@ -59,11 +59,11 @@
 
                                 @if (ViewData.ModelState["ticket-booking-reference"]?.Errors.Count() > 0)
                                 {
-                                    @Html.ValidationMessage("ticket-booking-reference", "", new { @class = "form-error" })
+                                    @Html.ValidationMessage("ticket-booking-reference", "", new { @class = "form-error", id = "validation-message-booking-reference" })
                                 }
                                 @if (ViewData.ModelState["BookingReference"]?.Errors.Count() > 0)
                                 {
-                                    @Html.ValidationMessage("BookingReference", "", new { @class = "form-error" })
+                                    @Html.ValidationMessage("BookingReference", "", new { @class = "form-error", id = "validation-message-booking-reference" })
                                 }
                             </div>
                         </fieldset>
@@ -77,7 +77,7 @@
 
                                 @if (ViewData.ModelState["ticket-booking-reference"]?.Errors.Count() > 0 || (ViewData.ModelState["ticket"]?.Errors.Count() > 0))
                                 {
-                                    @Html.TextBoxFor(Model => Model.Ticket, new { id = "reader-ticket-number", @class = "form-warning", required = true })
+                                    @Html.TextBoxFor(Model => Model.Ticket, new { id = "reader-ticket-number", @class = "form-warning", required = true, aria_describedby = "validation-message-ticket" })
                                 }
                                 else
                                 {
@@ -86,11 +86,11 @@
 
                                 @if (ViewData.ModelState["ticket"]?.Errors.Count() > 0)
                                 {
-                                    @Html.ValidationMessageFor(Model => Model.Ticket, "", new { @class = "form-error" })
+                                    @Html.ValidationMessageFor(Model => Model.Ticket, "", new { @class = "form-error", id = "validation-message-ticket" })
                                 }
                                 @if (ViewData.ModelState["ticket-booking-reference"]?.Errors.Count() > 0)
                                 {
-                                    @Html.ValidationMessage("ticket-booking-reference", "", new { @class = "form-error" })
+                                    @Html.ValidationMessage("ticket-booking-reference", "", new { @class = "form-error", id = "validation-message-ticket" })
                                 }
                             </div>
                         </fieldset>
