--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
@@ -16,11 +16,11 @@
 
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
-            <label for="doc-1">1</label>
+            <label for="DocumentReference1">1</label>
             @if (ViewData.ModelState["DocumentReference1"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference1, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference1, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference1, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference1"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference1, "", new { @class = "form-error", id = "validation-message-DocumentReference1" })
             }
             else
             {
@@ -29,11 +29,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-2">2</label>
+            <label for="DocumentReference2">2</label>
             @if (ViewData.ModelState["DocumentReference2"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference2, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference2, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference2, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference2"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference2, "", new { @class = "form-error", id = "validation-message-DocumentReference2" })
             }
             else
             {
@@ -42,11 +42,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-3">3</label>
+            <label for="DocumentReference3">3</label>
             @if (ViewData.ModelState["DocumentReference3"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference3, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference3, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference3, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference3"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference3, "", new { @class = "form-error", id = "validation-message-DocumentReference3" })
             }
             else
             {
@@ -57,11 +57,11 @@
 
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
-            <label for="doc-4">4</label>
+            <label for="DocumentReference4">4</label>
             @if (ViewData.ModelState["DocumentReference4"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference4, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference4, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference4, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference4"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference4, "", new { @class = "form-error", id = "validation-message-DocumentReference4" })
             }
             else
             {
@@ -70,11 +70,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-5">5</label>
+            <label for="DocumentReference5">5</label>
             @if (ViewData.ModelState["DocumentReference5"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference5, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference5, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference5, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference5"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference5, "", new { @class = "form-error", id = "validation-message-DocumentReference5" })
             }
             else
             {
@@ -83,11 +83,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-6">6</label>
+            <label for="DocumentReference6">6</label>
             @if (ViewData.ModelState["DocumentReference6"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference6, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference6, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference6, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference6"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference6, "", new { @class = "form-error", id = "validation-message-DocumentReference6" })
             }
             else
             {
@@ -98,11 +98,11 @@
 
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
-            <label for="doc-7">7</label>
+            <label for="DocumentReference7"">7</label>
             @if (ViewData.ModelState["DocumentReference7"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference7, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference7, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference7, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference7"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference7, "", new { @class = "form-error", id = "validation-message-DocumentReference7" })
             }
             else
             {
@@ -111,11 +111,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-8">8</label>
+            <label for="DocumentReference8">8</label>
             @if (ViewData.ModelState["DocumentReference8"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference8, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference8, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference8, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference8"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference8, "", new { @class = "form-error", id = "validation-message-DocumentReference8" })
             }
             else
             {
@@ -124,11 +124,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-9">9</label>
+            <label for="DocumentReference9">9</label>
             @if (ViewData.ModelState["DocumentReference9"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference9, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference9, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference9, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference9"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference9, "", new { @class = "form-error", id = "validation-message-DocumentReference9" })
             }
             else
             {
@@ -139,11 +139,11 @@
 
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
-            <label for="doc-10">10</label>
+            <label for="DocumentReference10">10</label>
             @if (ViewData.ModelState["DocumentReference10"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference10, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference10, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference10, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference10"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference10, "", new { @class = "form-error", id = "validation-message-DocumentReference10" })
             }
             else
             {
@@ -152,11 +152,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-11">11</label>
+            <label for="DocumentReference11">11</label>
             @if (ViewData.ModelState["DocumentReference11"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference11, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference11, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference11, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference11"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference11, "", new { @class = "form-error", id = "validation-message-DocumentReference11" })
             }
             else
             {
@@ -165,11 +165,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="doc-12">12</label>
+            <label for="DocumentReference12">12</label>
             @if (ViewData.ModelState["DocumentReference12"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.DocumentReference12, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.DocumentReference12, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.DocumentReference12, "", new { @class = "form-warning", aria_describedby = "validation-message-DocumentReference12"})
+                @Html.ValidationMessageFor(Model => Model.DocumentReference12, "", new { @class = "form-error", id = "validation-message-DocumentReference12" })
             }
             else
             {
@@ -188,11 +188,11 @@
 
     <div class="col-md-3 col-sm-12 col-xs-12">
         <div class="order-form-field">
-            <label for="reserve-1">A</label>
+            <label for="ReserveDocumentReference1">A</label>
             @if (ViewData.ModelState["ReserveDocumentReference1"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.ReserveDocumentReference1, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference1, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference1, "", new { @class = "form-warning", aria_describedby = "validation-message-ReserveDocumentReference1"})
+                @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference1, "", new { @class = "form-error", id = "validation-message-ReserveDocumentReference1" })
             }
             else
             {
@@ -201,11 +201,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="reserve-2">B</label>
+            <label for="ReserveDocumentReference2">B</label>
             @if (ViewData.ModelState["ReserveDocumentReference2"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.ReserveDocumentReference2, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference2, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference2, "", new { @class = "form-warning", aria_describedby = "validation-message-ReserveDocumentReference2"})
+                @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference2, "", new { @class = "form-error", id = "validation-message-ReserveDocumentReference2" })
             }
             else
             {
@@ -214,11 +214,11 @@
         </div>
 
         <div class="order-form-field">
-            <label for="reserve-3">C</label>
+            <label for="ReserveDocumentReference3">C</label>
             @if (ViewData.ModelState["ReserveDocumentReference3"]?.Errors.Count() > 0)
             {
-                @Html.TextBoxFor(Model => Model.ReserveDocumentReference3, "", new { @class = "form-warning" })
-                @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference3, "", new { @class = "form-error" })
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference3, "", new { @class = "form-warning", aria_describedby = "validation-message-ReserveDocumentReference3"})
+                @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference3, "", new { @class = "form-error", id = "validation-message-ReserveDocumentReference3" })
             }
             else
             {
