--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -172,20 +172,12 @@
 
                     <ul>
                         <li>
-                            how to get here: <br>
-                            <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/about/visit-us/how-to-find-us/">https://www.nationalarchives.gov.uk/about/visit-us/how-to-find-us/</a>
-                        </li>
-                        <li>
-                            what you can take into the reading rooms:<br>
-                            <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/about/visit-us/researching-here/can-take-reading-rooms/">https://www.nationalarchives.gov.uk/about/visit-us/researching-here/can-take-reading-rooms/</a>
-                        </li>
-                        <li>
                             how to use the reading rooms (rules for readers):<br>
-                            <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/documents/rules.pdf">https://www.nationalarchives.gov.uk/documents/rules.pdf</a>
+                            <a target="_blank" rel="noreferrer noopener" href="~/documents/rules.pdf">https://www.nationalarchives.gov.uk/book-a-reading-room-visit/documents/rules.pdf</a>
                         </li>
                         <li>
                             more information about this service:<br>
-                            <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/about/visit-us/about-the-book-a-reading-room-visit-service/">https://www.nationalarchives.gov.uk/about/visit-us/about-the-book-a-reading-room-visit-service/</a>
+                                                                <a target="_blank" rel="noreferrer noopener" href="/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/">https://www.nationalarchives.gov.uk/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/</a>
                         </li>
                     </ul>
                     <p>Remember to bring the correct documents to complete your registration if you are using your reader's ticket for the first time.</p>
@@ -197,7 +189,7 @@
                     </p>
                     <p>
                         Our building is COVID-19 secure. You have agreed to comply with our Coronavirus Visitor Charter as part of the booking process:<br>
-                        <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/documents/coronavirus-visitor-charter.pdf">https://www.nationalarchives.gov.uk/documents/coronavirus-visitor-charter.pdf</a>
+                        <a target="_blank" rel="noreferrer noopener" href="~/documents/coronavirus-visitor-charter.pdf">https://www.nationalarchives.gov.uk/book-a-reading-room-visit/documents/coronavirus-visitor-charter.pdf</a>
                     </p>
                     <p>
                         Remember to wear a face mask when you visit, unless you have a valid exemption:<br>
