--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                 <div class="col-md-12">
                     <p>
                         Use this service to book a visit to view our documents. You may book a maximum of two visits in 4 weeks.<br>
-                        <a class="info-link" href="https://www.nationalarchives.gov.uk/about/visit-us/about-the-book-a-reading-room-visit-service/">
+                        <a class="info-link" href="/book-a-reading-room-visit/about-the-book-a-reading-room-visit-service/">
                             Find out more about how to book and what to expect.
                         </a>
                     </p>
