--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_ContactFooter.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_ContactFooter.cshtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6 first">
             <h2>Need help with this service?</h2>
-            <a target="_blank" rel="noreferrer noopener" href="https://www.nationalarchives.gov.uk/contact-us/">Contact us</a>
+            <a target="_blank" rel="noreferrer noopener" href="mailto:AdvancedDocumentOrder@nationalarchives.gov.uk">Contact us</a>
         </div>
         <div class="col-md-6">
             <h2>What do you think of this service?</h2>
