--- a/book-a-reading-room-visit.web/Views/Shared/PrivacyPolicy.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/PrivacyPolicy.cshtml
@@ -67,7 +67,7 @@
                             people who contact us with an enquiry or a complaint, or to ask for information we have about them (a subject access request), or to make a freedom of information request
                         </li>
                         <li>
-                            people who have signed up tom our mailing list and to receive information from The National Archives
+                            people who have signed up to our mailing list and to receive information from The National Archives
                         </li>
                         <li>
                             people who engage with us professionally, for example from government departments and from the wider archival sectors
@@ -482,7 +482,7 @@
                     <p>
                         If you unsubscribe from our newsletter, we will keep a record of the fact that you have unsubscribed.
                     </p>
-                    <p>If you would like further information about our information retention practices, please&nbsp;<a href="#contactus">contact us</a>.</p>
+                    <p>If you would like further information about our information retention practices, please&nbsp;<a href="#contact">contact us</a>.</p>
                     <h2 id="yourrights">Your rights over your personal information</h2>
                     <p>Data protection legislation gives you various rights over your information. These may include (as relevant) the right to:</p>
                     <ul>
