Update about and terms of use pages

--- a/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/AboutTheBookAReadingRoomVisitService.cshtml
@@ -55,7 +55,7 @@
                     and large document reading room should request a camera stand using the provisional booking form.
                 </p>
                 <h2>Prepare for your visit</h2>
-                <p>Find out about <a href="https://www.nationalarchives.gov.uk/about/visit-us/researching-here/what-can-i-expect-when-i-visit/">what you can expect when you visit</a>.</p>
+                <p>Find out about <a href="/book-a-reading-room-visit/what-can-I-expect-when-I-visit/">what you can expect when you visit</a>.</p>
 
             </div>
         </div>
