--- a/book-a-reading-room-visit.web/Views/Shared/TermsOfUse.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/TermsOfUse.cshtml
@@ -5,13 +5,14 @@
 @await Html.PartialAsync("Partials/_Breadcrumbs")
 
 <div class="heading">
-    <h1 class="display-4">Booking events</h1>
+    <h1 class="display-4">Booking events and visits</h1>
 </div>
 <div class="container content-wrapper">
     <div class="heading">
         <div class="row">
             <div class="col-md-9">
-                <h2>Conditions of sale</h2>
+
+                <h2>Booking events and conditions of sale</h2>
                 <ul>
                     <li>The National Archives reserves the right to refuse admission</li>
                     <li>Latecomers may be refused admission until a suitable break</li>
@@ -22,6 +23,12 @@
                     <li>The National Archives reserves the right to make alterations to the programme</li>
                     <li>Tickets cannot be exchanged or refunded</li>
                 </ul>
+                <h2>Booking a visit to view our documents</h2>
+                <p> New slots for booking will be made available every day.</p>
+                <p>Each booking is for one person only on a first come, first served basis – you will not be able to bring anyone with you, unless they book a visit themselves or have a duty of care. </p>
+                <p>There is a reasonable limit of any two types of bookings (standard or bulk) in 28 days. Two bookings cannot be made for the same date.</p>
+                <p>Please be thoughtful and considerate of others when you book – we may cancel your booking if you exceed our reasonable limit of two bookings in 4 weeks. </p>
+
             </div>
         </div>
     </div>
