Add ternary condition for date pluralisation

--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -154,7 +154,7 @@
                                     <button class="button" type="submit">
                                         <span class="col-md-12 col-sm-12 col-xs-12">
                                             <span class="col-md-6 col-sm-6 col-xs-6 align-left">@dateText</span>
-                                            <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats places available</span>
+                                            <span class="col-md-6 col-sm-6 col-xs-6 align-right">@Model.AvailableBookings[index].AvailableSeats @(Model.AvailableBookings[index].AvailableSeats == 1 ? "place" : "places") available</span>
                                         </span>
                                     </button>
                                 </form>
