--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
                     <div class="card">
                         <div class="order-option-heading">
                             <h2>Book a standard visit</h2>
-                            <p class="bold-text">@Model.StandardBookingAvailable.ToString("N0") places available</p>
+                            <p class="bold-text">@Model.StandardBookingAvailable.ToString("N0") @(Model.StandardBookingAvailable == 1 ? "place" : "places") available</p>
                         </div>
 
                         <ul>
@@ -60,7 +60,7 @@
                     <div class="card">
                         <div class="order-option-heading">
                             <h2>Book a bulk order visit</h2>
-                            <p class="bold-text">@Model.BulkBookingsAvailable.ToString("N0") places available</p>
+                            <p class="bold-text">@Model.BulkBookingsAvailable.ToString("N0") @(Model.BulkBookingsAvailable == 1 ? "place" : "places") available</p>
                         </div>
 
                         <ul>
